Book: minor edits in --sigclip-median example of Statistics
Some minor edits were made to make it more clear.

--- a/NEWS
+++ b/NEWS
@@ -12,7 +12,8 @@ See the end of the file for license conditions.
      sigma-clipping and only print the desired value as a single-value
      measurement. Until now sigma-clipping results included a lot of
      visually useful information, which also made automatic usage of
-     results hard. These options fix this issue.
+     results hard. These options fix this issue. Please see the example in
+     the book under `--sigclip-median' for a nice use case.
 
 ** Removed features
 
