Book: Quoted the value of LD_LIBRARY_PATH in Known Issues
Until now quotes were missing in the suggested solution in
"make check".  If there were a space in the previous value,
there would be a problem.

With this commit, double quotes were added.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -7116,7 +7116,7 @@ sure it is added to the list of directories, add the following line to your
 (non-standard) directories.
 
 @example
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
+export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/local/lib"
 @end example
 
 You can also add more directories by using a colon `@code{:}' to separate
