Table: new --head and --tail options to only output certain rows
The top and bottom of a set of (possibly sorted/selected) columns usually
has a lot of significance during an analysis, so these two options were
added to Table to fascilitate this job.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,10 @@ See the end of the file for license conditions.
      results hard. These options fix this issue. Please see the example in
      the book under `--sigclip-median' for a nice use case.
 
+  Table:
+   --head: Only output the given number of rows from the top of columns.
+   --tail: Only output the given number of rows from the botoom of columns.
+
 ** Removed features
 
 ** Changed features
