CosmicCalculator: redshift zero request is converted to 1e-14
Until now, CosmicCalculator would fail when given a value of zero with this
GSL error: "gsl: qng.c:189: ERROR: failed to reach tolerance with
highest-order rule". So its numerical integration would fail to converge.

To fix the problem, with this commit, when the user requests results for
z=0, we internally convert it to `1e-14' (close to, but not exactly, the
64-bit floating point precision limit).

This bug was reported by Leindert Boogaard.

This fixes bug #56299.

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,7 @@ See the end of the file for license conditions.
   bug #56246: Single-valued measurement must abort with no value in Statistics.
   bug #56256: Segmentation fault when reading plain text array/image.
   bug #56257: ConvertType: Values not preserved when converting text to FITS.
+  bug #56299: cosmiccal fails at z=0.
 
 
 
