--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -5623,7 +5623,7 @@ found, then configure Gnuastro like the command below (correcting
 @file{/path/to/lib}). For more, see @ref{Known issues} and
 @ref{Installation directory}.
 @example
-$ ./configure LDFLAGS="-I/path/to/lib"
+$ ./configure LDFLAGS="-L/path/to/lib"
 @end example
 @end cartouche
 
